--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Chelsy's Website</title>
+    <title>Chelsy's Advanced Digital Engineering Lab </title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
