--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       <caption>Menu</caption>
       <tr>
         <td><a href="me.html">About Me</a></td>
+        <td><a href="w1.html">1</a></td>
+        <td><a href="w2.html">2</a></td>
+        <td><a href="w3.html">3</a></td>
+
+
 
       </tr>
     </table>
