--- a/me.html
+++ b/me.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+  </head>
+  
+  
+<style>
+h1 {font-family:verdana; font-size:1000%;text-align:center;}
+h2 {font-family:verdana; font-size:150%;text-align:center;}
+h3 {font-family:verdana; font-size:125%;text-align:center;}
+li {font-family:verdana; font-size:100%}
+h4 {font-family:verdana; font-size:100%;text-align:center;}
+</style>
 
+<div style="font size:1500%">
+
+
+  <body>
+    <div class="title">
+      <img id="aboutmeimg" src="title_aboutme.png"/>
+    </div>
+    <h2> WELCOME to my DIGITAL ENGINEERING & FABRICATION PAGE! </h2>
+    <br><br><br>
+    <div class="container">
+      <img id="normalimg" src="mypicture.png">
+    </div>
+    <br><br><br>
+    <div class="container">
+     
+    </div>
+    <br><br><br>
+    <h2> Check out my previous website!https://fab.wra.net/kimh/  </h2>
+    <br><br><br>
+   
+    </div>
+  </body>
