--- a/me.html
+++ b/me.html
@@ -31,7 +31,7 @@ h4 {font-family:verdana; font-size:100%;text-align:center;}
      
     </div>
     <br><br><br>
-    <h2> Check out my previous website!https://fab.wra.net/kimh/  </h2>
+    <h2> Click <a href="https://fab.wra.net/kimh/">here</a> to go to my previous webpage! </h2>
     <br><br><br>
    
     </div>
