--- a/index.html
+++ b/index.html
@@ -12,19 +12,12 @@
       <caption>Menu</caption>
       <tr>
         <td><a href="me.html">About Me</a></td>
-        <td><a href="w0.html">Design Challenge</a></td>
-        <td><a href="w1.html">CAD DESIGN</a></td>
-        <td><a href="w2.html">UV PRINTING</a></td>
-        <td><a href="w3.html">LASER CUTTER</a></td>
-        <td><a href="w4.html">SCANNING</a></td>
-        <td><a href="w5.html">VINYL PRINTING</a></td>
-        <td><a href="w6.html">VACUUM FORMING/LAMINATION</a></td>
-        <td><a href="w7.html">CNC MILLING</a></td>
-        <td><a href="w8.html">ELECTRONICS</a></td>
-        <td><a href="w9.html">SOLDERING</a></td>
-        <td><a href="w10.html">ARDUINO</a></td>
-        <td><a href="w11.html">FINAL PROJECT</a></td>
-        <td><a href="w12.html">ADVANCED</a></td>
+        <td><a href="w1.html">ShopBot</a></td>
+        <td><a href="w2.html">CAD DESIGN</a></td>
+        <td><a href="w3.html">Plasma Cutting</a></td>
+        <td><a href="w4.html">Photo V-Carve</a></td>
+        <td><a href="w5.html">Pewter Molding</a></td>
+    
       </tr>
     </table>
   </body>
