--- a/w2.html
+++ b/w2.html
@@ -14,9 +14,8 @@
     <h3> Week 2 | CAD FURNITURE </h3>
     <br>
     <p>
-       The task for this week was to use VCarve to create our name plate.  
-
-"What is a V-Carve?" VCarve is an application that allows to cut parts on a CNC Router. It has the ability to transform 2D designs to 3D design, and calculate its toolpath. 
+The task for this week is to create a CAD furniture! We had an option to either create our own design, or download files from autodesk and print them out! 
+      
   </p>
     <br>
     <p><hr></p>
@@ -24,7 +23,7 @@
     <h3>Process</h3>
     <br>
     <p>
-aaa
+Although getting files off the internet and printing them seems to be an "easy" process, the steps were rather complicated. In the beginning, I wanted to print out a fancy "kerf chair", but since the design looked too intricate to begin with, I chose to start with a tiny stool. After getting the files, I did not know what to do because although the website said "just print after you download!", this was not the case. Therefore, I asked for Mr. Gerber's help, and after making many attempts in opening the file through various programs, we finally figured it out. We first opened the file in "Adobe Illustrator" and cut out all the texts and outlines from it. Then, we opened the file in "Corel Draw" where we set adjusted the size. Finally, we uploaded this edited file to V-Carve to get the file ready to print. 
 </p>
     <br>
     <div class="container">
@@ -58,7 +57,7 @@ aaa
     <h3>Reflection</h3>
     <br>
     <p>
-aaa
+I really x ∞ enjoyed creating furniture with CAD. Although it was a bit more complicated than I imagined it would be, I had so much fun seeing the pieces print out, and assembling them. The most satisfying moment was when I finished assembling my own stool! 
 </p>
     <br>
     <div class="container">
