--- a/w3.html
+++ b/w3.html
@@ -14,9 +14,7 @@
     <h3> Week 3| PLASMA CUTTING & ETC. </h3>
     <br>
     <p>
-       The task for this week was to use VCarve to create our name plate.  
-
-"What is a V-Carve?" VCarve is an application that allows to cut parts on a CNC Router. It has the ability to transform 2D designs to 3D design, and calculate its toolpath. 
+The task for this week is to use plasma cutting to make our own design. 
   </p>
     <br>
     <p><hr></p>
@@ -24,7 +22,7 @@
     <h3>Process</h3>
     <br>
     <p>
-aaa
+Setting up the plasma machine was really interesting (and difficult) - we had to drill out the back woonden board, and fill the space with water. I did not know that there were these many types of cutting/carving. So far, I have just experienced CNC, so I was really excited to try plasma cutting!
 </p>
     <br>
     <div class="container">
