Update and rename w5,html to w5.html

--- a/w5.html
+++ b/w5.html
@@ -14,14 +14,14 @@
     <h3> Week 5| POURING PEWTER </h3>
     <br>
     <p>
-The task for this week is   </p>
+The task for this week is to create pewter mold.   </p>
     <br>
     <p><hr></p>
     <br>
     <h3>Process</h3>
     <br>
     <p>
-Setting up the plasma machine was really interesting (and difficult) - we had to drill out the back woonden board, and fill the space with water. I did not know that there were these many types of cutting/carving. So far, I have just experienced CNC, so I was really excited to try plasma cutting!
+We had to create a mill to pour pewter using either the laser cutter or the CNC milling machine. The mold should contain the negative (of the picture), opening, air holes, and four holes on each vertices. 
 </p>
     <br>
     <div class="container">
