--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="title">
-      <img id="titleimg" src="chelsykim.png"/>
+      <img id="titleimg" src="ck.png"/>
     </div>
     <table>
       <caption>Menu</caption>
