--- a/me.html
+++ b/me.html
@@ -19,7 +19,7 @@ h4 {font-family:verdana; font-size:100%;text-align:center;}
 
   <body>
     <div class="title">
-      <img id="aboutmeimg" src="title_aboutme.png"/>
+      <img id="aboutmeimg" src="am.png"/>
     </div>
     <h2> WELCOME to my DIGITAL ENGINEERING & FABRICATION PAGE! </h2>
     <br><br><br>
