--- a/w1.html
+++ b/w1.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="title">
-      <img id="weektitleimg" src="vinyl.png"/>
+      <img id="weektitleimg" src="v.png"/>
     </div>
     <h1> WEEK 1| USING VCARVE </h1>
     <p><hr></p>
