--- a/w2.html
+++ b/w2.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="title">
-      <img id="weektitleimg" src="vinyl.png"/>
+      <img id="weektitleimg" src="cf.png"/>
     </div>
     <h1> WEEK 2| CAD FURNITURE </h1>
     <p><hr></p>
