--- a/w3.html
+++ b/w3.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="title">
-      <img id="weektitleimg" src="vinyl.png"/>
+      <img id="weektitleimg" src="p.png"/>
     </div>
     <h1> WEEK 3| PLASMA CUTTING </h1>
     <p><hr></p>
