--- a/w4.html
+++ b/w4.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="title">
-      <img id="weektitleimg" src="vinyl.png"/>
+      <img id="weektitleimg" src="pv.png"/>
     </div>
     <h1> WEEK 4| PHOTO V-CARVE </h1>
     <p><hr></p>
