--- a/w5.html
+++ b/w5.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="title">
-      <img id="weektitleimg" src="vinyl.png"/>
+      <img id="weektitleimg" src="pm.png"/>
     </div>
     <h1> WEEK 5| POURING PEWTER </h1>
     <p><hr></p>
