--- a/w1.html
+++ b/w1.html
@@ -38,8 +38,8 @@ To make using the machines an easier process, I will explain the steps I took:
 </p>
     <br>
     <div class="container">
-    	<img id="normalimg" src="p1.png">
-    	<img id="normalimg" src="p2.png">
+    	<img id="normalimg" src="v0.png">
+    	<img id="normalimg" src="v1.png">
     	
     </div>
     <p>
@@ -55,8 +55,7 @@ To make using the machines an easier process, I will explain the steps I took:
 aaa
     <br>
     <div class="container">
-      <img id="normalimg" src="p3.png"/>
-      <img id="normalimg" src="p4.png"/>
+      <img id="normalimg" src="v2.png"/>
     </div>
     <br>
    
