--- a/w1.html
+++ b/w1.html
@@ -87,8 +87,7 @@ aaa
     <h3>FILES</h3>
     <br>
     <ul>
-      <li><a href="cornell.cdr">abc</a></li>
-      <li><a href="monkey.cdr">abc</a></li>
+      <li><a href="ChelsyToolpath.crv">Nameplate Toolpath</a></li>
     </ul>
     <br>
     <p><hr></p>
