--- a/w2.html
+++ b/w2.html
@@ -27,8 +27,10 @@ Although getting files off the internet and printing them seems to be an "easy" 
 </p>
     <br>
     <div class="container">
-    	<img id="normalimg" src="p1.png">
-    	<img id="normalimg" src="p2.png">
+    	<img id="normalimg" src="c0.png">
+    	<img id="normalimg" src="c1.png">
+      <img id="normalimg" src="c2.png">
+
     	
     </div>
     <p>
@@ -44,8 +46,8 @@ Although getting files off the internet and printing them seems to be an "easy" 
 aaa
     <br>
     <div class="container">
-      <img id="normalimg" src="p3.png"/>
-      <img id="normalimg" src="p4.png"/>
+      <img id="normalimg" src="c3.png"/>
+      <img id="normalimg" src="c4.png"/>
     </div>
     <br>
    
