--- a/w5.html
+++ b/w5.html
@@ -25,8 +25,8 @@ We had to create a mill to pour pewter using either the laser cutter or the CNC 
 </p>
     <br>
     <div class="container">
-    	<img id="normalimg" src="p1.png">
-    	<img id="normalimg" src="p2.png">
+    	<img id="normalimg" src="m0.png">
+    	
     	
     </div>
     <p>
@@ -41,14 +41,7 @@ We had to create a mill to pour pewter using either the laser cutter or the CNC 
     <p>
 aaa
     <br>
-    <div class="container">
-      <img id="normalimg" src="p3.png"/>
-      <img id="normalimg" src="p4.png"/>
-    </div>
-    <br>
-   
-    </div>
-    <br>
+  
     <p><hr></p>
 
 
