--- a/w3.html
+++ b/w3.html
@@ -22,12 +22,14 @@ The task for this week is to use plasma cutting to make our own design.
     <h3>Process</h3>
     <br>
     <p>
-Setting up the plasma machine was really interesting (and difficult) - we had to drill out the back woonden board, and fill the space with water. I did not know that there were these many types of cutting/carving. So far, I have just experienced CNC, so I was really excited to try plasma cutting!
+Setting up the plasma machine was really interesting (and difficult) - we had to drill out the back woonden board, and fill the space with water. I did not know that there were these many types of cutting/carving. So far, I have just experienced CNC, so I was really excited to try plasma cutting! (The first three photos are from welding, and the fourth photo is from setting up the plasma machine)
 </p>
     <br>
     <div class="container">
-    	<img id="normalimg" src="p1.png">
-    	<img id="normalimg" src="p2.png">
+    	<img id="normalimg" src="weld0.png">
+    	<img id="normalimg" src="weld1.png">
+      <img id="normalimg" src="weld2.png">
+    	<img id="normalimg" src="plasmamachine.png">
     	
     </div>
     <p>
