--- a/w3.html
+++ b/w3.html
@@ -29,7 +29,7 @@ Setting up the plasma machine was really interesting (and difficult) - we had to
     	<img id="normalimg" src="weld0.png">
     	<img id="normalimg" src="weld1.png">
       <img id="normalimg" src="weld2.png">
-    	<img id="normalimg" src="plasmamachine.png">
+    	<img id="normalimg" src="plamsamachine.png">
     	
     </div>
     <p>
@@ -45,8 +45,7 @@ Setting up the plasma machine was really interesting (and difficult) - we had to
 aaa
     <br>
     <div class="container">
-      <img id="normalimg" src="p3.png"/>
-      <img id="normalimg" src="p4.png"/>
+ 
     </div>
     <br>
    
