--- a/w2.html
+++ b/w2.html
@@ -79,8 +79,8 @@ I really x ∞ enjoyed creating furniture with CAD. Although it was a bit more c
     <h3>FILES</h3>
     <br>
     <ul>
-      <li><a href="cornell.cdr">abc</a></li>
-      <li><a href="monkey.cdr">abc</a></li>
+      <li><a href="stool.dxf">Stool</a></li>
+     
     </ul>
     <br>
     <p><hr></p>
