--- a/w3.html
+++ b/w3.html
@@ -77,8 +77,7 @@ aaa
     <h3>FILES</h3>
     <br>
     <ul>
-      <li><a href="cornell.cdr">abc</a></li>
-      <li><a href="monkey.cdr">abc</a></li>
+      <li><a href="CHELSY enroute.rou">Plasma Cutting File</a></li>
     </ul>
     <br>
     <p><hr></p>
