--- a/w1.html
+++ b/w1.html
@@ -52,8 +52,8 @@ To make using the machines an easier process, I will explain the steps I took:
  <h3>Outcome</h3>
     <br>
     <p>
-aaa
-    <br>
+This is how my nameplate turned out! I want to print out several more of these using different types of wood. 
+      <br>
     <div class="container">
       <img id="normalimg" src="v2.png"/>
     </div>
