--- a/w1.html
+++ b/w1.html
@@ -52,7 +52,7 @@ To make using the machines an easier process, I will explain the steps I took:
  <h3>Outcome</h3>
     <br>
     <p>
-This is how my nameplate turned out! I want to print out several more of these using different types of wood. 
+This is how my nameplate turned out! In the future, I want to try printing several more of these using different types of wood. 
       <br>
     <div class="container">
       <img id="normalimg" src="v2.png"/>
