--- a/w2.html
+++ b/w2.html
@@ -43,7 +43,7 @@ Although getting files off the internet and printing them seems to be an "easy" 
  <h3>Outcome</h3>
     <br>
     <p>
-aaa
+This is how my stool turned out to be after I finished designing it! I look forward to creating more furnitures such as bookcases, stools, desks, and more. 
     <br>
     <div class="container">
       <img id="normalimg" src="c3.png"/>
