--- a/w3.html
+++ b/w3.html
@@ -11,7 +11,7 @@
     <h1> WEEK 3| PLASMA CUTTING </h1>
     <p><hr></p>
     <br>
-    <h3> Week 3| PLASMA CUTTING & ETC. </h3>
+    <h3> Week 3| PLASMA CUTTING / Introduction to Welding </h3>
     <br>
     <p>
 The task for this week is to use plasma cutting to make our own design. 
@@ -42,7 +42,7 @@ Setting up the plasma machine was really interesting (and difficult) - we had to
  <h3>Outcome</h3>
     <br>
     <p>
-aaa
+Coming soon! :)
     <br>
     <div class="container">
  
@@ -57,7 +57,7 @@ aaa
     <h3>Reflection</h3>
     <br>
     <p>
-aaa
+We did not have enough time to use the plasma machine after we set it up, so we are going to do this project after we get back from Spring break! I included the plasma files below. 
 </p>
     <br>
     <div class="container">
