--- a/w4.html
+++ b/w4.html
@@ -22,11 +22,8 @@ Also, the task for this week was to use photo v-carve to print out a picture. I 
     <h3>Process</h3>
     <br>
     <p>
-When Ran and I were deciding which photos to choose, we decided to choose the selfie we took to capture our first welding journey! Sadly, our first few attempts in printing are not as good as the latter ones. I will guide you through Ran and my journey in using photo v-carve.
-1) The problem with the first file was that the details were too fine - so it was hard to notice the difference in hue.
-2) Therefore, we made the depth deeper, and the result turned out to be a little better (but not enough to satisfy Ran)
-3) Devastated, we decided to try the horizontal cut with deeper depth, but the result was disappointing.
-4) Mr. Gerber gave us a manual, and we followed the settings as it was listed in the manual. We chose a shallow groove and it was the best of all attempts!
+When Ran and I were deciding which photos to choose, we decided to choose the selfie we took to capture our first welding journey! Sadly, our first few attempts in printing are not as good as the latter ones. 
+
 </p>
     <br>
     <div class="container">
@@ -43,7 +40,11 @@ When Ran and I were deciding which photos to choose, we decided to choose the se
  <h3>Outcome</h3>
     <br>
     <p>
-aaa
+I will guide you through Ran and my journey in using photo v-carve and show you our outcome!
+This is how our four projects turned out. 1) The problem with the first file was that the details were too fine - so it was hard to notice the difference in hue.
+2) Therefore, we made the depth deeper, and the result turned out to be a little better (but not enough to satisfy Ran)
+3) Devastated, we decided to try the horizontal cut with deeper depth, but the result was disappointing.
+4) Mr. Gerber gave us a manual, and we followed the settings as it was listed in the manual. We chose a shallow groove and it was the best of all attempts!
     <br>
     <div class="container">
       <img id="normalimg" src="p1.png">
