--- a/w4.html
+++ b/w4.html
@@ -27,6 +27,7 @@ When Ran and I were deciding which photos to choose, we decided to choose the se
 </p>
     <br>
     <div class="container">
+      <img id="normalimg" src="ranandme.png">
     	<img id="normalimg" src="p0.png">
     	
     </div>
