--- a/w5.html
+++ b/w5.html
@@ -41,6 +41,8 @@ We had to create a mill to pour pewter using either the laser cutter or the CNC 
     <p>
 This is how my pewter mold turned out to be! I am excited to see how this cat figure will turn out to be.
     <br>
+     <div class="container">
+
   <img id="normalimg" src="m0.png">
     <p><hr></p>
 
