--- a/w4.html
+++ b/w4.html
@@ -11,11 +11,10 @@
     <h1> WEEK 4| PHOTO V-CARVE </h1>
     <p><hr></p>
     <br>
-    <h3> Week 4| PHOTO V-CARVE/WELDING </h3>
+    <h3> Week 4| PHOTO V-CARVE </h3>
     <br>
     <p>
-This week, we experienced a little bit of welding. My first welding experience was scary - it was really challening to control my hand, not be scared of the flames and the dark! However, I really wish to be able to weld better one day!
-Also, the task for this week was to use photo v-carve to print out a picture. I was intrigued by how many different functions V-Carve has!  </p>
+The task for this week was to use photo v-carve to print out a picture. I was intrigued by how many different functions V-Carve has!  </p>
     <br>
     <p><hr></p>
     <br>
