--- a/w3.html
+++ b/w3.html
@@ -22,7 +22,8 @@ The task for this week is to use plasma cutting to make our own design.
     <h3>Process</h3>
     <br>
     <p>
-Setting up the plasma machine was really interesting (and difficult) - we had to drill out the back woonden board, and fill the space with water. I did not know that there were these many types of cutting/carving. So far, I have just experienced CNC, so I was really excited to try plasma cutting! (The first three photos are from welding, and the fourth photo is from setting up the plasma machine)
+This week, we experienced a little bit of welding. My first welding experience was scary - it was really challening to control my hand, not be scared of the flames and the dark! However, I really wish to be able to weld better one day!
+Also, Setting up the plasma machine was really interesting (and difficult) - we had to drill out the back woonden board, and fill the space with water. I did not know that there were these many types of cutting/carving. So far, I have just experienced CNC, so I was really excited to try plasma cutting! (The first three photos are from welding, and the fourth photo is from setting up the plasma machine)
 </p>
     <br>
     <div class="container">
