--- a/me.html
+++ b/me.html
@@ -24,7 +24,7 @@ h4 {font-family:verdana; font-size:100%;text-align:center;}
     <h2> WELCOME to my DIGITAL ENGINEERING & FABRICATION PAGE! </h2>
     <br><br><br>
     <div class="container">
-      <img id="normalimg" src="mypicture.png">
+      <img id="normalimg" src="chelsy.png">
     </div>
     <br><br><br>
     <div class="container">
