--- a/w4.html
+++ b/w4.html
@@ -82,8 +82,9 @@ Getting to use photo V-Carve was really interesting. Who would have imagined we 
     <h3>FILES</h3>
     <br>
     <ul>
-      <li><a href="cornell.cdr">abc</a></li>
-      <li><a href="monkey.cdr">abc</a></li>
+      <p>
+   The files were too big to attach! :(  
+    </p> 
     </ul>
     <br>
     <p><hr></p>
