--- a/w3.html
+++ b/w3.html
@@ -43,7 +43,11 @@ Also, Setting up the plasma machine was really interesting (and difficult) - we 
  <h3>Outcome</h3>
     <br>
     <p>
-Coming soon! :)
+We are back from spring break and we finally printed out our plasma design! 
+       	<img id="normalimg" src="ps.png">
+        <img id="normalimg" src="ps1.png">
+
+      
     <br>
     <div class="container">
  
