--- a/w7.html
+++ b/w7.html
@@ -8,14 +8,13 @@
     <div class="title">
       <img id="weektitleimg" src="cf.png"/>
     </div>
-    <h1> WEEK 2| CAD FURNITURE </h1>
+    <h1> WEEK 7| EGGBOT </h1>
     <p><hr></p>
     <br>
-    <h3> Week 2 | CAD FURNITURE </h3>
+    <h3> Week 7 | EGGBOT </h3>
     <br>
     <p>
-The task for this week is to create a CAD furniture! We had an option to either create our own design, or download files from autodesk and print them out! 
-      
+The task for this week was to create EGGBOT!      
   </p>
     <br>
     <p><hr></p>
@@ -23,7 +22,7 @@ The task for this week is to create a CAD furniture! We had an option to either 
     <h3>Process</h3>
     <br>
     <p>
-Although getting files off the internet and printing them seems to be an "easy" process, the steps were rather complicated. In the beginning, I wanted to print out a fancy "kerf chair", but since the design looked too intricate to begin with, I chose to start with a tiny stool. After getting the files, I did not know what to do because although the website said "just print after you download!", this was not the case. Therefore, I asked for Mr. Gerber's help, and after making many attempts in opening the file through various programs, we finally figured it out. We first opened the file in "Adobe Illustrator" and cut out all the texts and outlines from it. Then, we opened the file in "Corel Draw" where we set adjusted the size. Finally, we uploaded this edited file to V-Carve to get the file ready to print. 
+
 </p>
     <br>
     <div class="container">
