--- a/w7.html
+++ b/w7.html
@@ -14,12 +14,17 @@
     <h3> Week 7 | EGGBOT </h3>
     <br>
     <p>
-The task for this week was to create EGGBOT!      
+The task for this week was to create EGGBOT! The Eggbot is an art robot that can draw on spherical or egg-shaped products. The size of the sphere can vary from a ping pong all to a small grapefruit. (1.25~4.25 inches in diameter). The kit is based on the original design by Bruce Shapiro.     
   </p>
     <br>
     <p><hr></p>
     <br>
     <h3>Process</h3>
+1. Print all the required pieces using the makerbot. 
+2. Assemble all the pieces (the robot and the eggbot)
+3. Download Inkscape on a computer and an "eggbot" extension.
+4. Set up the eggbot (set up the height of the pen and screw the sides in)
+5. Connect the eggbot to the computer.
     <br>
     <p>
 
@@ -42,8 +47,8 @@ The task for this week was to create EGGBOT!
  <h3>Outcome</h3>
     <br>
     <p>
-This is how my stool turned out to be after I finished designing it! I look forward to creating more furnitures such as bookcases, stools, desks, and more. 
-    <br>
+aaa 
+     <br>
     <div class="container">
       <img id="normalimg" src="c3.png"/>
       <img id="normalimg" src="c4.png"/>
@@ -58,7 +63,7 @@ This is how my stool turned out to be after I finished designing it! I look forw
     <h3>Reflection</h3>
     <br>
     <p>
-I really x ∞ enjoyed creating furniture with CAD. Although it was a bit more complicated than I imagined it would be, I had so much fun seeing the pieces print out, and assembling them. The most satisfying moment was when I finished assembling my own stool! 
+aaa 
 </p>
     <br>
     <div class="container">
