--- a/w7.html
+++ b/w7.html
@@ -25,6 +25,7 @@ The task for this week was to create EGGBOT! The Eggbot is an art robot that can
 3. Download Inkscape on a computer and an "eggbot" extension.
 4. Set up the eggbot (set up the height of the pen and screw the sides in)
 5. Connect the eggbot to the computer.
+6. Once you click send, all the information will be sent to the eggbot.
     <br>
     <p>
 
