--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <td><a href="w5.html">Pewter Molding</a></td>
         <td><a href="w6.html">Reserve Logo Printing</a></td>
         <td><a href="w7.html">EGGBOT</a></td>
+        <td><a href="w8.html">CAD MINI FURNITURE</a></td>
+
 
       
   
