--- a/w6.html
+++ b/w6.html
@@ -20,7 +20,19 @@ The task for this week was to mill out a Reserve seal on the CNC milling machine
     	
     </div>
     <p>
-      
+   </p>
+   <br>
+   <p><hr></p>
+   <br>
+   <h3>Process</h3>
+  <br>
+  <p>
+ The first picture is the failed version of the seal, and the second one is the successful one!
+ -</p>
+ -    <br>
+ -    <div class="container">
+ -    	<img id="normalimg" src="tr1.png">
+ -    	<img id="normalimg" src="tr2.png">
     </p>
     <br>
     <p><hr></p>
