--- a/w7.html
+++ b/w7.html
@@ -49,11 +49,9 @@ The task for this week was to create EGGBOT! The Eggbot is an art robot that can
  <h3>Reflection</h3>
     <br>
     <p>
-The pen holder was too weak to change the latitude of the pen. Therefore, we couldn’t actually draw on the egg. We hope to succeed in drawing on the wooden egg (and the actual egg) next year! :)
+The pen holder was too weak to change the latitude of the pen. Therefore, we couldn’t actually draw on the egg. Also, for the b-robot, the wheels didn't have a tire (or something to make the wheel studier), so it couldn't stand. We hope to succeed in drawing on the wooden egg (and the actual egg) and make the robot's legs work next year! :)
      <br>
-    <div class="container">
-      <img id="normalimg" src="eggbot.png"/>
-      <img id="normalimg" src=".png"/>
+ 
     </div>
     <br>
    
