--- a/w6.html
+++ b/w6.html
@@ -63,7 +63,7 @@ Therefore, we changed the pocket depth to be less, and ran the machine again. Th
     <h3>FILES</h3>
     <br>
     <ul>
-      <li><a href="Logo.zip">Stool</a></li>
+      <li><a href="Logo.zip">Reserve Seal</a></li>
      
     </ul>
     <br>
