--- a/w6.html
+++ b/w6.html
@@ -27,7 +27,7 @@ The task for this week was to mill out a Reserve seal on the CNC milling machine
    <h3>Process</h3>
   <br>
   <p>
- The first picture is the failed version of the seal, and the second one is the successful one!
+ The first picture is the failed version of the seal, and the second one is the successful one! We also tried using different types of wood to print. The more rough the texture was, the more debris it left. (Using the wood with softer texture prints much more smoothly!) 
  </p>
    <br>
     <div class="container">
@@ -42,7 +42,7 @@ The task for this week was to mill out a Reserve seal on the CNC milling machine
     <br>
     <p>
 The first trial did not go well because the pocket depth was too deep, causing the wood to be penetrated. Also, there were several cases when the machine stopped working over night.
-Therefore, we changed the pocket depth to be less, and ran the machine again. This time, it came out to be successful!
+Therefore, we changed the pocket depth to be less, and ran the machine again. On our next trial, it came out to be successful!
 
     <br>
     <div class="container">
