--- a/w6.html
+++ b/w6.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="title">
-      <img id="weektitleimg" src="cf.png"/>
+      <img id="weektitleimg" src="reserveseall.png"/>
     </div>
     <h1> WEEK 6| RESERVE LOGO PRINT </h1>
     <p><hr></p>
