--- a/w7.html
+++ b/w7.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="title">
-      <img id="weektitleimg" src="cf.png"/>
+      <img id="weektitleimg" src="eggbotlogo.png"/>
     </div>
     <h1> WEEK 7| EGGBOT </h1>
     <p><hr></p>
