--- a/w8.html
+++ b/w8.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="title">
-      <img id="weektitleimg" src="cf.png"/>
+      <img id="weektitleimg" src="cadmini.png"/>
     </div>
     <h1> WEEK 8| MINI CAD</h1>
     <p><hr></p>
