--- a/w8.html
+++ b/w8.html
@@ -8,13 +8,13 @@
     <div class="title">
       <img id="weektitleimg" src="cadmini.png"/>
     </div>
-    <h1> WEEK 8| MINI CAD</h1>
+    <h1> WEEK 8| MINI CAD FURNITURE</h1>
     <p><hr></p>
     <br>
     <h3> Week 8 | MINI CAD </h3>
     <br>
     <p>
-After an intense week of finishing my Compass project, I wanted to make a mini-furniture set for my cousin’s hamsters. Therefore, I downloaded files from opendesk cc furniture and changed the proportion. I printed out a small table and several stools. I really enjoy assembling these furnitures, so I hope to print out my uniquely designed furniture next year.
+After an intense week of finishing my Compass project, I wanted to make a mini-furniture set for my cousin’s hamsters. Therefore, I downloaded the file from opendesk cc furniture and changed the proportion of it. I printed out a small table and several stools. I really enjoy assembling these furnitures, so I hope to print out my uniquely designed furniture next year.
   </p>
     <br>
     <p><hr></p>
@@ -22,7 +22,7 @@ After an intense week of finishing my Compass project, I wanted to make a mini-f
     <h3>Process</h3>
 1. Download/or create your own furniture layout with coreldraw. 
 2. Print it out!
-3. Assemble the pieces
+3. Assemble the pieces and apply wood glue.
     <br>
     <p>
 
